# remnawave-telegram-bot-monitoring

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
alertmanager/: alertmanager.yml
docker/: Dockerfile
prometheus/: prometheus.yml
scripts/: bash_loading_animations.sh  generate_env.py  install.sh  remna-tg-monitoring
src/: metrics.py
src/alert_bot/: app.py  config.py
src/bot/: app.py  config.py  health.py  logging.py
src/bot/handlers/: auth.py  callbacks.py  help.py  interval.py  lang.py  panel.py  start.py
src/bot/keyboards/: main_menu.py
src/bot/services/: access.py  backup.py  formatting.py  i18n.py  updater.py
src/bot/storage/: db.py  models.py
src/remna_client/: auth.py  client.py  models.py
src/remna_client/endpoints/: alerts.py  nodes.py  overview.py  payments.py  plans.py  traffic.py  users.py
tests/: test_access.py  test_client_auth.py  test_config.py  test_i18n.py  test_parsers.py
