[project]
name = "remnawave-telegram-bot-monitoring"
version = "0.1.0"
description = "Minimal monitoring bot"
authors = [{name="OpenAI"}]
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0",
    "httpx>=0.24",
    "pydantic>=1.10",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
